객체 생성 연습

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /chap02-operator-lecture-source/.idea/gradle.xml
+/.idea/.gitignore
+/.idea/01_Java.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
